# adk-loop-lab

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF-1.md  HANDOFF-10.md  HANDOFF-11.md  HANDOFF-12.md  HANDOFF-13.md  HANDOFF-14.md  HANDOFF-15.md  HANDOFF-2.md  HANDOFF-3.md  HANDOFF-4.md  HANDOFF-5.md  HANDOFF-6.md  HANDOFF-7.md  HANDOFF-8.md  HANDOFF-9.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/adr/: 001-use-google-adk.md  002-sqlite-not-vector-db.md  003-async-shaped-sqlite3.md
docs/architecture/: overview.md
docs/concepts/: context-vs-state-vs-memory.md  failure-modes.md  loop-engineering.md  verification-and-stopping.md
scripts/: run_example_1.sh  run_example_2.sh  run_example_3.sh
site/: README.md  mdsvex.config.js  package-lock.json  package.json  svelte.config.js
site/src/: app.css  app.html
site/src/lib/components/: DocLayout.svelte  Footer.svelte  Mermaid.svelte  Nav.svelte
site/src/routes/: +page.svx
site/src/routes/architecture/: +page.svx
site/src/routes/concepts/: +page.svx
site/src/routes/examples/: +page.svx
site/static/: CNAME
src/adk_loop_lab/: __init__.py  cli.py  config.py
src/adk_loop_lab/adk/: agents.py  callbacks.py  compatibility.py  fake_model.py  runner.py  workflows.py
src/adk_loop_lab/context/: builder.py
src/adk_loop_lab/evaluation/: composite.py  deterministic.py
src/adk_loop_lab/events/: console.py  recorder.py
src/adk_loop_lab/loop/: checkpoints.py  controller.py  lifecycle.py  policies.py  recovery.py
src/adk_loop_lab/memory/: base.py  promotion.py  sqlite.py
src/adk_loop_lab/models/: __init__.py  budgets.py  evaluations.py  events.py  memory.py  plans.py  state.py
src/adk_loop_lab/state/: sqlite.py  transactions.py
src/adk_loop_lab/tools/: __init__.py  filesystem.py  safety.py  shell.py
tests/examples/: test_level_1_refinement.py  test_level_2_research.py
tests/fixtures/corpus/: checkpointing.md  memory_systems.md  session_state.md  state_persistence.md
tests/fixtures/target_repo/: README.md  kvstore.py
tests/fixtures/target_repo/tests/: conftest.py  (+1 more)
tests/golden/: test_golden_traces.py
tests/golden/traces/: level_1_trace.jsonl  level_2_trace.jsonl  level_3_trace.jsonl
tests/unit/: test_adk.py  test_adk_p2.py  test_cli_config.py  test_context_eval.py  test_failure_injection.py  test_loop.py  test_memory.py  test_models.py  test_runtime.py  test_runtime_p2.py  test_tools.py
(+18 files in other folders)
