[project]
name = "adk-loop-lab"
version = "0.1.0"
description = "Agentic Loop Engineering Reference Repository with Google ADK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Max Espinoza", email = "me@rmax.io" }]
keywords = ["agent", "loop", "adk", "gemini", "ai-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-adk>=2.2.0,<3",
    "pydantic>=2.12,<3",
    "pyyaml>=6.0.2,<7",
    "structlog>=24,<25",
    "click>=8.1.8,<9",
    "aiosqlite>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=1,<2",
    "pytest-mock>=3,<4",
    "ruff>=0.13,<1",
    "mypy>=1.17,<2",
]

[project.scripts]
adk-loop = "adk_loop_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_loop_lab"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "I",    # isort
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["adk_loop_lab"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["tests/fixtures/", "var/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "live: marks tests that require live Gemini credentials",
]
